<resources>
    <string name="app_name">SuperNote</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="signup">SignUp</string>
    <string name="super_note">Super Note</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="or">- OR -</string>
    <string name="login">LogIn</string>
    <string name="search_notes">Search Notes</string>
    <string name="notes">Notes</string>
    <string name="add_title">Add Title</string>
    <string name="enter_password">Enter Password</string>
    <string name="logout">LogOut</string>
    <string name="add_a_description">Add a Description</string>
    <string name="add">Add</string>
    <string name="press_the_button_to_start_recording">Press The Button To Start  Recording</string>
</resources>